// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccessTokens /> should handle proper CA 1`] = `
<div>
  <h1>
    Access Tokens
  </h1>
  <p>
    You need to generate a token file for each client you want to grant access to.
  </p>
  <p>
    To use the token with another Turris router you need to transfer it using the "Remote Devices" plugin on the client device.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Create Token
    </h2>
    <form>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="1"
        >
          Token name
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control is-invalid"
            id="1"
            type="text"
            value=""
          />
        </div>
        <div
          class="invalid-feedback"
        >
          Name cannot be empty
        </div>
        <div
          class="form-text"
        >
          <small>
            Shorter than 64 characters. Only alphanumeric characters, dots, dashes and underscores.
          </small>
        </div>
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          data-testid="add-token-button"
          disabled=""
          type="submit"
        >
          <span>
            Add
          </span>
        </button>
      </div>
    </form>
  </div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Tokens
    </h2>
    <div
      class="spinner-wrapper my-3 text-center"
    >
      <div
        class="spinner-border"
        role="status"
      >
        <span
          class="sr-only"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<AccessTokens /> should render error 1`] = `
<div>
  <h1>
    Access Tokens
  </h1>
  <p
    class="text-center text-danger"
  >
    An error occurred while fetching data.
  </p>
</div>
`;

exports[`<AccessTokens /> should render spinner 1`] = `
<div>
  <h1>
    Access Tokens
  </h1>
  <div
    class="spinner-wrapper my-3 text-center"
  >
    <div
      class="spinner-border"
      role="status"
    >
      <span
        class="sr-only"
      />
    </div>
  </div>
</div>
`;
